log/build_2020-07-24_21-38-10/py_turtlebot3_gazebo/stderr.log
  File "/home/haruki/my_turtlebot3_ws/install/py_turtlebot3_gazebo/lib/python3.8/site-packages/py_turtlebot3_gazebo/particles_ctrl.py", line 97
    p..z = self.test_z
      ^
SyntaxError: invalid syntax

